Fixing technologies list in projects section - wrapping to new line

--- a/src/style-3.css
+++ b/src/style-3.css
@@ -830,6 +830,7 @@
     .technologies div{
       width: fit-content;
       padding-right: 2%;
+      white-space: nowrap;
       padding-left: 2%;
     }
 
