--- a/src/style.css
+++ b/src/style.css
@@ -746,6 +746,7 @@
     .technologies div{
       width: fit-content;
       padding-right: 4%;
+      white-space: nowrap;
       padding-left: 4%;
     }
 
